# BUPT-PASCC2026

./: CMakeLists.txt  M1-文法口径冻结草案.md  _extract_requirements.txt  设计概要报告.md  项目开发TODO清单.md
documents/: M1-文法口径冻结草案.md  Pascal-S 到 C 编译器设计与实现（交流汇报）.pptx  _extract_acceptance.txt  _extract_github_report.txt  ~$Pascal-S 到 C 编译器设计与实现（交流汇报）.pptx  中期汇报PPT大纲-M2版本.md  模块测试分析报告.md  附件1：课程设计表格(分组版)(2).docx  需求分析报告.md  项目开发TODO清单.md
include/: compiler_driver.h  error_codes.h  lexer.h  log.h  token.h
samples/: 00_main.pas  01_features.c  01_features.pas  02_lex_error.pas
src/: compiler_driver.cpp  lexer.cpp  main.cpp
tests/: lexer_tests.cpp
